--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "framer-motion": "^4.1.17",
+    "fslightbox-react": "^1.6.2-2",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
